--- a/multimedia.css
+++ b/multimedia.css
@@ -10,11 +10,15 @@
 	color: red;
 }
 
-.infospace {
+.infospace, .multimediaheaderbar {
 	cursor: default;
 }
 
 .multimediaicon {
+	cursor: pointer;
+}
+
+.multimediaimg {
 	cursor: pointer;
 }
 
@@ -56,7 +60,7 @@
 	transform: scale(1.2, 1.2);
 }
 
-.shareicon {
+.recommendicon {
 	transform: scale(1.4, 1.4);
 }
 
